# kikuchi-atlas

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: deploy-atlas-pages.yml
LICENSES/: ATLAS_MEDIA_AND_GEOMETRY.md
docs/atlas/: README.md  (+6 more)
scripts/: build_atlas.py  build_forsterite_spherical_dictionary_fixture.py  build_ice_ih_engine_dashboard.py  build_ice_ih_spherical_dictionary.py  build_ni_gain24db_reference_baseline.py  build_public_atlas.py  build_release_metadata.py  build_retained_near_depth.py  export_mtex_habit_reference.m  new_work_item.py  product_status.py  publish_ice_ih_source_observation.py  render_direct_reflector_depth_rotation.py  render_direct_reflector_rotation.py  render_dynamical_master_rotation.py  render_ice_ih_dictionary_signal_space_bridge.py  render_ice_near_depth_rotation.py  render_phase_art_templates.py  render_retained_near_depth_rotation.py  run_ice_ih_detector_hough_diagnostic.py  run_ice_ih_detector_to_s2_adapter_proof.py  run_ice_ih_master_detector_congruence.py  run_ice_ih_offgrid_detector_refinement.py  run_ice_ih_photometric_stress.py  run_ice_ih_projection_center_cosearch.py  run_ice_ih_projection_center_sensitivity.py  run_ice_ih_synthetic_detector_orientation_recovery.py  run_ice_ih_synthetic_recovery.py  run_ice_ih_virtual_camera_transfer.py  validate_work_items.py  verify_ice_ih_spherical_dictionary.py  verify_orientation_gallery.py  verify_spherical_dictionary.py  work_status.py
tests/: __init__.py  final_fixtures.py  relief_fixtures.py  spherical_fixtures.py
(+663 files in other folders)
